Align review user to end instead of center

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ body > * {
 }
 
 .review-user {
-    text-align: end;
+    align-self: flex-end;
     font-size: 18px;
     font-weight: bold;
 }
@@ -146,11 +146,6 @@ body > * {
     background-color: #1F2937;
 }
 
-<<<<<<< HEAD
-/* 
-
-=======
->>>>>>> e1eef5f (Add CSS to index.html)
 /* White text */
 .header-logo, .introduction-text h1 {
     color: #F9FAF8;
